--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,10 @@
             <version>8.0.33</version>
         </dependency>
         <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-mysql</artifactId>
+            <groupId>br.com.microservices</groupId>
+            <artifactId>cambio-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.cloud</groupId>-->
