--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,11 +15,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-  flyway:
-    url: jdbc:mysql://localhost:3306?allowPublicKeyRetrieval=true&useSSL=false
-    user: root
-    password: qaz123456
-    schemas: book_service
+#  flyway:
+#    url: jdbc:mysql://localhost:3306?allowPublicKeyRetrieval=true&useSSL=false
+#    user: root
+#    password: qaz123456
+#    schemas: book_service
   jackson:
     serialization:
       fail-on-empty-beans: false
