--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,3 +45,7 @@ resilience4j:
         default:
             max-concurrent-calls: 10
             max-wait-duration: 10s
+springdoc:
+  show-actuator: true
+  api-docs:
+    path: /book-service/v3/api-docs
